--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: presentation_displays
 description: Flutter plugin supports to run on two screens. It's basically a tablet connected to another screen via an HDMI or Wireless
-version: 0.0.1
-author:
-homepage:
+homepage: https://github.com/VNAPNIC/presentation-displays
+version: 0.1.0
+author: vn.apnic@gmail.com
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
