--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,7 @@ homepage: https://github.com/VNAPNIC/presentation-displays
 version: 0.2.2
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  flutter: '>=1.12.0 <2.0.0'
+  sdk: ">=2.14.0 <3.0.0"
 
 dependencies:
   flutter:
