--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: presentation_displays
 description: Flutter plugin supports to run on two screens. It's basically a tablet connected to another screen via an HDMI or Wireless
 homepage: https://github.com/VNAPNIC/presentation-displays
 version: 0.2.2
+author: vn.apnic@gmail.com
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
