--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -31,6 +31,8 @@ target 'Runner' do
   use_frameworks!
   use_modular_headers!
 
+  pod 'SwiftFormat/CLI'
+
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
