--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -3,14 +3,14 @@ description: Demonstrates how to use the presentation_displays plugin.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
   # Flutter versions prior to 1.12 did not support the
   # flutter.plugin.platforms map.
-  flutter: ">=2.10.3"
+  flutter: ">=3.10.0"
 
 dependencies:
   flutter:
