--- a/android/build.gradle
+++ b/android/build.gradle
@@ -38,6 +38,15 @@ android {
     lintOptions {
         disable 'InvalidPackage'
     }
+
+     compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    
+    kotlinOptions {
+        jvmTarget = '17'
+    }
 }
 
 dependencies {
